--- a/explorer/templates/explorer/challenge-submitted.html
+++ b/explorer/templates/explorer/challenge-submitted.html
@@ -1,4 +1,4 @@
-{% extends 'explorer/base.html' %}
+{% extends 'explorer/challenge-base.html' %}
 {% load static i18n %}
 
 {% block wrapper-class%}challenge mission-{{object.mission.number}}-sidebar{%endblock%}
