--- a/explorer/templates/explorer/challenge-start.html
+++ b/explorer/templates/explorer/challenge-start.html
@@ -1,4 +1,4 @@
-{% extends 'explorer/base.html' %}
+{% extends 'explorer/challenge-base.html' %}
 {% load static i18n %}
 
 {% block wrapper-class%}challenge mission-{{object.mission.number}}-sidebar{%endblock%}
@@ -6,10 +6,8 @@
 {% block main-body %}
 <div class="centre-container">
   <h1>{% trans "Welcome to a new challenge!" %}</h1>
-  <div class="row">
-    <p class="lead">{{object.description|safe}}</p>
-    <a href="{% url 'observe' object.pk %}" class="btn btn-info btn-lg  animated tada">Start the challenge ></a>
-  </div>
+    <p>{{object.description|safe}}</p>
+    <p><a href="{% url 'observe' object.pk %}" class="btn btn-info btn-lg  animated tada">Start the challenge ></a></p>
   </div>
 
 {% endblock %}
