--- a/explorer/templates/explorer/mission.html
+++ b/explorer/templates/explorer/mission.html
@@ -8,6 +8,7 @@
   <div class="container content-wrapper-inner challenge-header mission-{{object.number}}">
   <div class="row">
     <div class="col-12  mission-content">
+      <h1>{% trans "Mission" %} {{object.number}}</h1>
       <h1 class="mission-name">{{object.name|safe}}</h1>
       <p><a class="btn btn-info btn-lg animated tada" href="{% url 'challenge' 1 %}" role="button">{% trans "Start the mission" %} &raquo;</a></p>
     </div>
@@ -15,6 +16,6 @@
 </div>
 </div>
 
-<div class="corner-ribbon top-right sticky shadow mission-{{object.number}}-colour"><h1>{% trans "Mission" %} {{object.number}}</h1></div>
-
 {% endblock %}
+
+{% block ribbon %}{% endblock %}
