--- a/explorer/templates/explorer/challenge-observe.html
+++ b/explorer/templates/explorer/challenge-observe.html
@@ -81,13 +81,28 @@ $(document).ready(function(){
   });
 
   $("#submit_button").on("click", function(){
-    console.log(target_type)
-    var tid = $(this).data('tid')
+    console.log()
+    var tid = $(this).data('tid');
+    var start = new Date();
+    var end = startEnd(start);
+		var data = {start:start.toISOString().substr(0,19),
+					end:end.substr(0,19),
+					aperture:'0m4', //obs_vals[0]['aperture'],
+					filters:JSON.stringify(target.filters),
+          target_type: target_type,
+					token: localStorage.getItem('token'),
+          csrfmiddlewaretoken: csrftoken,
+          challenge:challenge_id
+				};
     if (target_type == 'moving'){
-      submit_to_serol(tid, localStorage.getItem('token'), challenge_id, redirect_url, csrftoken);
+      data['object_name'] = $(this).data('name');
+      submit_to_serol(data, redirect_url);
     } else {
-      submit_to_serol(targets[tid], localStorage.getItem('token'), challenge_id, redirect_url, csrftoken);
+      data['object_name'] = target.name;
+      data['object_ra'] = target.ra;
+      data['object_dec'] = target.dec;
     }
+    submit_to_serol(data, redirect_url);
   });
 });
 </script>
@@ -101,7 +116,7 @@ $(document).ready(function(){
     {% if targets %}
     {% for target in targets %}
     <div class="col-lg-4  col-sm-6 pb-5 target-holder">
-        <a href="#" id="target-img-{{target}}" data-toggle="modal" data-target="#targetModal" data-tid="{{target.id}}">
+        <a href="#" id="target-img-{{target}}" data-toggle="modal" data-target="#targetModal" data-tid="{{target.id}}" data-name="{{target.name}}">
             {% with "explorer/images/"|add:target.icon as icon_url %}<img class="img-fluid" src="{% static icon_url %}" alt="">
             <div class="target-name-holder">
               <span class="target-name">{{target.name}}</span>
