--- a/explorer/templates/explorer/base.html
+++ b/explorer/templates/explorer/base.html
@@ -16,6 +16,7 @@
     <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto|Aldrich" rel="stylesheet">
 
     <link href="{% static "explorer/css/layout.css" %}" rel="stylesheet">
+    <link href="{% static "explorer/css/serol.css" %}" rel="stylesheet">
 
     <link rel="stylesheet" href="{% static 'explorer/css/font-awesome-regular.css' %}">
     <link rel="stylesheet" href="{% static 'explorer/css/font-awesome-core.css' %}">
