--- a/explorer/templates/explorer/challenge-start.html
+++ b/explorer/templates/explorer/challenge-start.html
@@ -5,9 +5,9 @@
 
 {% block main-body %}
 <div class="centre-container">
-  <h1>{% trans "Welcome to a new challenge!" %}</h1>
+  <h1>{{object.action|safe}}</h1>
     <p>{{object.description|safe}}</p>
-    <p><a href="{% url 'observe' object.pk %}" class="btn btn-info btn-lg  animated tada">Start the challenge ></a></p>
+    <p><a href="{% url 'observe' object.pk %}" class="btn btn-info btn-lg  animated tada">{% trans 'Start the challenge' %}</a></p>
   </div>
 
 {% endblock %}
