--- a/explorer/templates/explorer/challenge-submitted.html
+++ b/explorer/templates/explorer/challenge-submitted.html
@@ -4,8 +4,9 @@
 {% block wrapper-class%}challenge mission-{{object.mission.number}}-sidebar{%endblock%}
 
 {% block main-content %}
-    <div id="request-message">
+    <div class="container">
       <div class="row">
+        <div class="col-lg-10">
         <div id="serol-figure">
           <div id="status-info">
             <span id="request-site"><i class="far fa-cog fa-w-16 fa-spin fa-3x fa-fw"></i></span>
@@ -75,6 +76,14 @@
             </div>
           </div>
         </div>
+
+        <div class="col-lg-2">
+            <div class="bubble">
+              <p>{% trans "I'm asking my telescope friends to take a picture of " %} <strong>{{progress.target}}</strong>
+              {% trans "for you" %}</p>
+            </div>
+        </div>
+
       </div>
     </div>
 
