Styling fixes and markdown editor in admin

--- a/explorer/static/explorer/css/layout.css
+++ b/explorer/static/explorer/css/layout.css
@@ -15,6 +15,10 @@ a:hover {
   color: #ff5233;
 }
 
+a.btn {
+  color: #fff;
+}
+
 /* Custom default button */
 .btn-secondary,
 .btn-secondary:hover,
