--- a/explorer/templates/flatpages/default.html
+++ b/explorer/templates/flatpages/default.html
@@ -1,17 +1,15 @@
-{% extends 'base.html' %}
+{% extends 'explorer/home.html' %}
 {% load markdown_deux_tags %}
 
 {% block title %}{{ flatpage.title }}{% endblock %}
 
 {% block main-content %}
 <div class="content-wrapper">
-  <div class="content-wrapper-inner">
     <div class="container">
       <div class="row">
       <h1>{{flatpage.title}}</h1>
       {{ flatpage.content|markdown }}
+      </div>
     </div>
-    </div>
-  </div>
 </div>
 {% endblock %}
