Minor updates to style

--- a/explorer/templates/explorer/challenge-start.html
+++ b/explorer/templates/explorer/challenge-start.html
@@ -7,7 +7,7 @@
 <div class="centre-container">
   <h1>{% trans 'Challenge '%}{{object.number}}: {{object.name}}</h1>
     <p>{{object.description|safe}}</p>
-    <p><a href="{% url 'observe' object.pk %}" class="btn btn-info btn-lg  animated tada">{% trans 'Start the challenge' %}</a></p>
+    <p><a href="{% url 'observe' object.pk %}" class="btn btn-lg btn-4 btn-4a animated tada">{% trans 'Start the challenge' %}</a></p>
   </div>
 
 {% endblock %}
