--- a/explorer/static/explorer/css/layout.css
+++ b/explorer/static/explorer/css/layout.css
@@ -198,6 +198,7 @@ h1 {
 
 p {
   font-size:2rem;
+  color:#bfd6e8;
 }
 
 #request-message {
@@ -474,6 +475,11 @@ img.identify-image {
   border-width: 3px;
   min-height: 100%;
 }
+.blank-sticker {
+  color: #aaa;
+  padding:10px;
+  font-size:800%;
+}
 
 /* Toggle switch for analyser
 */
@@ -605,6 +611,32 @@ input[type=radio]:checked ~ .check:active{
   color: #f0f0f0;
   transform: rotate(-45deg);
   -webkit-transform: rotate(-45deg);
+}
+
+/* Messages */
+/* The alert message box */
+.alert {
+   padding: 20px;
+   background-color: #bfe8dc; /* Red */
+   color: white;
+   margin-bottom: 15px;
+}
+
+/* The close button */
+.closebtn {
+   margin-left: 15px;
+   color: white;
+   font-weight: bold;
+   float: right;
+   font-size: 22px;
+   line-height: 20px;
+   cursor: pointer;
+   transition: 0.3s;
+}
+
+/* When moving the mouse over the close button */
+.closebtn:hover {
+   color: black;
 }
 
 
