--- a/explorer/templates/explorer/base.html
+++ b/explorer/templates/explorer/base.html
@@ -22,8 +22,15 @@
   <body data-media-url="{{MEDIA_PREFIX}}">
 
     <div class="site-wrapper {% block wrapper-class%}{%endblock%}">
+
       {% block menubar %}
       {% endblock%}
+      {% for message in messages %}
+      <div class="alert">
+       <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+       {{ message }}
+      </div>
+      {% endfor %}
 
 {% block main-content %}
 <div class="container">
