--- a/explorer/templates/explorer/challenge-observe.html
+++ b/explorer/templates/explorer/challenge-observe.html
@@ -155,7 +155,7 @@ $(document).ready(function(){
         <p></p>
       </div>
       <div class="modal-footer">
-        <a href="#" class="btn btn-secondary" id="submit_button" data-tid="">Take a picture! ></a>
+        <a href="#" class="btn btn-4 btn-4a" id="submit_button" data-tid="">Take a picture! ></a>
       </div>
     </div>
   </div>
