--- a/explorer/templates/explorer/home.html
+++ b/explorer/templates/explorer/home.html
@@ -88,7 +88,7 @@ $(document).ready(function(){
           </div>
       </div>
       <div class="modal-footer">
-        <a href="{% url 'mission' 1 %}" class="btn btn-secondary" >Next ></a>
+        <a href="{% url 'mission' 1 %}" class="btn btn-4 btn-4a" >Next ></a>
       </div>
     </div>
   </div>
