--- a/stickers/templates/stickers/sticker_list.html
+++ b/stickers/templates/stickers/sticker_list.html
@@ -13,15 +13,14 @@
   <p>{% trans "Below are the challenge stickers you have unlocked. Click each of them to see your pictures."%}</p>
   {% for mission in missions %}
   <div class="row">
-    <div class="col-2">
+    <div class="col-4">
+      <h2>Mission {{mission.number}}</h2>
       <img src="{{MEDIA_PREFIX}}{{mission.patch}}" alt="Mission {{mission.number}} patch" class="img-fluid rounded" />
+      <h2>{{mission.name}}</h2>
     </div>
-    <div class="col-10">
-      <h2>Mission {{mission.number}}: {{mission.name}}</h2>
-    </div>
+  <div class="col-8">
     <h3>Challenge Stickers</h3>
-  </div>
-  <div class="row">
+    <div class="row">
   {% for challenge in mission.challenge_set.all %}
   {% for  sticker in challenge.sticker_set.all %}
     {% if sticker in object_list %}
@@ -30,7 +29,7 @@
       </div>
     {% else %}
     <div class="col-2">
-      <div class="blank-sticker"></div>
+      <div class="blank-sticker">?</i></div>
     </div>
     {% endif %}
     {% endfor %}
@@ -38,7 +37,8 @@
   <p>No stickers defined?</p>
   {% endfor %}
 </div>
+</div>
+</div>
   {% endfor %}
-  </div>
 </div>
 {% endblock %}
