--- a/explorer/templates/flatpages/default.html
+++ b/explorer/templates/flatpages/default.html
@@ -8,7 +8,7 @@
     <div class="container">
       <div class="row">
       <h1>{{flatpage.title}}</h1>
-      {{ flatpage.content|markdown }}
+      {{ flatpage.content|safe|markdown }}
       </div>
     </div>
 </div>
